add dynamic footer

--- a/index-styles.html
+++ b/index-styles.html
@@ -2,11 +2,12 @@
 <html lang="en">
 	<head>	
 		<title>Codecademy Courses</title>	
-		<script src="js/jquery.min.js"></script> <!-- jquery libraries -->
-		<script src="js/handlebars-v3.0.3.js"></script> <!-- handlebars libraries -->
-		<script src="js/bootstrap.min.js"></script> <!-- bootstrap libraries -->
-		<link rel="stylesheet" href="css/bootstrap_plain.css"> <!-- bootstrap styling -->
-		<link rel="stylesheet" href="css/styles.css"> <!-- custom styling -->
+		<script src="js/jquery.min.js"></script>
+		<script src="js/handlebars-v3.0.3.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/date.js"></script>
+		<link rel="stylesheet" href="css/bootstrap_plain.css">
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	
 	<body>
@@ -166,5 +167,12 @@
 			<p>Java is among the most popular programming languages out there, mainly because of how versatile and compatible it is. Java can be used for a large number of things, including software development, mobile applications, and large systems development. As of 2019, 88% market share of all smartphones run on Android, the mobile operating system written in Java. Knowing Java opens a great deal of doors for you as a developer.</p>
 			<p>In this course you’ll be exposed to fundamental programming concepts, including object-oriented programming (OOP) using Java. You’ll build 7 Java projects—like a basic calculator—to help you practice along the way.</p>
 		</div>
+
+		<footer>
+			<div class="container">
+				<hr>
+				<div id="today"></div>
+			</div>
+		</footer>
 	</body>	
 </html>
