create new template

--- a/index-styles.html
+++ b/index-styles.html
@@ -27,7 +27,7 @@
 						<li class="dropdown">
 							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Command Line&nbsp;<span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href="command-line-course/navigating.html">Navigating the File System</a></li>
+								<li><a href="command-line-course/navigating-styles.html">Navigating the File System</a></li>
 								<li><a href="command-line-course/viewing.html">Viewing and Changing the File System</a></li>
 								<li><a href="command-line-course/redirecting.html">Redirecting Input and Output</a></li>
 								<li><a href="command-line-course/configuring.html">Configuring the Environment</a></li>
@@ -141,31 +141,20 @@
 		</nav>
 		
 		<div class="container">
-			<ol class="breadcrumb">
-				<li>Codecademy Courses</li>
-				<li>Breadcrumb #2</li>
-				<li>Breadcrumb #3</li>
-			</ol>
 			<h2>Learn the Command Line</h2>
 			<p>We use our mouse and fingers to click images of icons and access files, programs, and folders on our devices. However, this is just one way for us to communicate with computers. The command line is a quick, powerful, text-based interface developers use to more effectively and efficiently communicate with computers to accomplish a wider set of tasks. Learning how to use it will allow you to discover all that your computer is capable of!</p>
 			<h2>Learn HTML</h2>
-			<p>HTML is the foundation of all web pages. Without HTML, you wouldn't be able to organize text or add images or videos to your web pages. HTML is the beginning of everything you need to know to someday create beautiful web pages!</p>
-			<p>You will know all the common HTML tags used to structure HTML pages, the skeleton of all websites. You will also be able to create HTML tables to present tabular data efficiently.</p>
+			<p>HTML is the foundation of all web pages. Without HTML, you wouldn't be able to organize text or add images or videos to your web pages. HTML is the beginning of everything you need to know to someday create beautiful web pages! You will know all the common HTML tags used to structure HTML pages, the skeleton of all websites. You will also be able to create HTML tables to present tabular data efficiently.</p>
 			<h2>Learn CSS</h2>
-			<p>Without CSS, every web page would be plain text and images that flowed straight down the left side of the page. With CSS, you can add color and background images and change the layout of your page &mdash; your web pages might even feel like works of art!</p>
-			<p>You will learn many aspects of styling web pages! From setting up the correct file structure, to editing text and colors, to creating attractive layouts, you'll be able to customize the appearance of your web pages to suit your every need!</p>
+			<p>Without CSS, every web page would be plain text and images that flowed straight down the left side of the page. With CSS, you can add color and background images and change the layout of your page &mdash; your web pages might even feel like works of art! You will learn many aspects of styling web pages! From setting up the correct file structure, to editing text and colors, to creating attractive layouts, you'll be able to customize the appearance of your web pages to suit your every need!</p>
 			<h2>Introduction to JavaScript</h2>
-			<p>JavaScript is the language of the web. You can use it to add dynamic behavior, store information, and handle requests and responses on a website. The concepts covered in these courses lay the foundation for adding this behavior.</p>
-			<p>You will learn introductory level object oriented programming using ES6 JavaScript. This course sequence covers data types and structures, functions, and object-oriented programming with classical inheritance. Though you will learn these concepts in the context of ES6 syntax, they are required knowledge for understanding object oriented programming.</p>
+			<p>JavaScript is the language of the web. You can use it to add dynamic behavior, store information, and handle requests and responses on a website. The concepts covered in these courses lay the foundation for adding this behavior. You will learn introductory level object oriented programming using ES6 JavaScript. This course sequence covers data types and structures, functions, and object-oriented programming with classical inheritance. Though you will learn these concepts in the context of ES6 syntax, they are required knowledge for understanding object oriented programming.</p>
 			<h2>Learn PHP</h2>
-			<p>PHP is a widely used server-side programming language that’s become increasingly fast and powerful over the years. PHP works well with HTML and databases, making it a great language for anyone interested in building dynamic web applications.</p>
-			<p>In this course, you’ll be exposed to fundamental programming concepts in PHP.</p>
+			<p>PHP is a widely used server-side programming language that’s become increasingly fast and powerful over the years. PHP works well with HTML and databases, making it a great language for anyone interested in building dynamic web applications. In this course, you’ll be exposed to fundamental programming concepts in PHP.</p>
 			<h2>Learn SQL</h2>
-			<p>We live in a data-driven world: people search through data to find insights to inform strategy, marketing, operations, and a plethora of other categories. There are a ton of businesses that use large, relational databases, which makes a basic understanding of SQL a great employable skill not only for data scientists, but for almost everyone.</p>
-			<p>In this course, you’ll learn how to communicate with relational databases through SQL. You’ll learn how to manipulate data and build queries that communicate with more than one table.</p>
+			<p>We live in a data-driven world: people search through data to find insights to inform strategy, marketing, operations, and a plethora of other categories. There are a ton of businesses that use large, relational databases, which makes a basic understanding of SQL a great employable skill not only for data scientists, but for almost everyone. In this course, you’ll learn how to communicate with relational databases through SQL. You’ll learn how to manipulate data and build queries that communicate with more than one table.</p>
 			<h2>Learn Java</h2>
-			<p>Java is among the most popular programming languages out there, mainly because of how versatile and compatible it is. Java can be used for a large number of things, including software development, mobile applications, and large systems development. As of 2019, 88% market share of all smartphones run on Android, the mobile operating system written in Java. Knowing Java opens a great deal of doors for you as a developer.</p>
-			<p>In this course you’ll be exposed to fundamental programming concepts, including object-oriented programming (OOP) using Java. You’ll build 7 Java projects—like a basic calculator—to help you practice along the way.</p>
+			<p>Java is among the most popular programming languages out there, mainly because of how versatile and compatible it is. Java can be used for a large number of things, including software development, mobile applications, and large systems development. As of 2019, 88% market share of all smartphones run on Android, the mobile operating system written in Java. Knowing Java opens a great deal of doors for you as a developer. In this course you’ll be exposed to fundamental programming concepts, including object-oriented programming (OOP) using Java. You’ll build 7 Java projects—like a basic calculator—to help you practice along the way.</p>
 		</div>
 
 		<footer>
