--- a/resources.html
+++ b/resources.html
@@ -246,7 +246,10 @@
 						<p><a href="#all-resources">&uarr; Back to Resources</a></p>
 						<h2 id="java-resources">Learn Java</h2>
 						<ul>
-							<li>Resource</li>
+							<li><a href="https://docs.oracle.com/javase/tutorial/index.html" target="_blank" rel="noopener">The Java&trade; Tutorials</a></li>
+								<ul>
+									<li><a href="https://docs.oracle.com/javase/tutorial/essential/exceptions/index.html" target="_blank" rel="noopener">Lesson: Exceptions</a></li>
+								</ul>
 						</ul>
 						<p><a href="#all-resources">&uarr; Back to Resources</a></p>
 					</div>
