create new css styles

--- a/html-course/introduction.html
+++ b/html-course/introduction.html
@@ -142,7 +142,7 @@
 		
 		<div class="container">
 			<ol class="breadcrumb">
-				<li>Learn HTML</li>
+				<li>HTML</li>
 				<li>Introduction to HTML</li>
 			</ol>
 			<h2>Introduction to HTML</h2>
