--- a/html-course/standards.html
+++ b/html-course/standards.html
@@ -142,7 +142,7 @@
 		
 		<div class="container">
 			<ol class="breadcrumb">
-				<li>Learn HTML</li>
+				<li>HTML</li>
 				<li>HTML Document Standards</li>
 			</ol>
 			<h2>HTML Document Standards</h2>
