--- a/html-course/tables.html
+++ b/html-course/tables.html
@@ -142,7 +142,7 @@
 		
 		<div class="container">
 			<ol class="breadcrumb">
-				<li>Learn HTML</li>
+				<li>HTML</li>
 				<li>Tables</li>
 			</ol>
 			<h2>Tables</h2>
