--- a/css-course/selectors.html
+++ b/css-course/selectors.html
@@ -2,58 +2,171 @@
 <html lang="en">
 	<head>	
 		<title>Learn CSS</title>	
-		<script src="../js/jquery.min.js"></script> <!-- jquery libraries -->
-		<script src="../js/handlebars-v3.0.3.js"></script> <!-- handlebars libraries -->
-		<script src="../js/bootstrap.min.js"></script> <!-- bootstrap libraries -->
-		<link href="../css/bootstrap_blue.css" rel="stylesheet"> <!-- bootstrap styling -->	
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->	
+		<script src="../js/jquery.min.js"></script>
+		<script src="../js/handlebars-v3.0.3.js"></script>
+		<script src="../js/bootstrap.min.js"></script>
+		<script src="../js/date.js"></script>
+		<link rel="stylesheet" href="../css/bootstrap_plain.css">
+		<link rel="stylesheet" href="../css/styles.css">
 	</head>
 	
 	<body>
-		<div id="container">
-			<div class="row">
-				<div class="col-md-2">
-					<div id="content_left">
-						<ul class="nav nav-pills nav-stacked nav-pills-stacked-example">
-							<li class="active"><a href="selectors.html">CSS Setup and Selectors</a></li>
-							<li><a href="rules.html">CSS Visual Rules</a></li>
-							<li><a href="model.html">The Box Model</a></li>
-							<li><a href="changing.html">Changing the Box Model</a></li>
-							<li><a href="display.html">CSS Display and Positioning</a></li>
-							<li><a href="color.html">CSS Color</a></li>
-							<li><a href="typography.html">CSS Typography</a></li>
-							<li><a href="grid.html">CSS Grid Essentials</a></li>
-							<li><a href="advanced.html">Advanced CSS Grid</a></li>
-							<li><a href="../index.html">&larr; Back to Courses</a></li>
-						</ul>
-					</div>
+		<nav class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle Navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<h1><a class="navbar-brand" href="../index.html">Codecademy Courses</a></h1>
 				</div>
-				<div class="col-md-10">
-					<div id="content_right">
-						<h1>Learn CSS</h1>
-						<h2>CSS Setup and Selectors</h2>
-						<h3>Review CSS Selectors</h3>
-						<p>Throughout this lesson, you learned how to select HTML elements with CSS and apply styles to them. Let's review what you learned:</p>
-						<ul>
-							<li>CSS can change the look of HTML elements. In order to do this, CSS must select HTML elements, then apply styles to them.</li>
-							<li>CSS can select HTML elements by tag, class, or ID.</li>
-							<li>Multiple CSS classes can be applied to one HTML element.</li>
-							<li>Classes can be reusable, while IDs can only be used once.</li>
-							<li>IDs are more specific than classes, and classes are more specific than tags. That means IDs will override any styles from a class, and classes will override any styles from a tag selector.</li>
-							<li>Multiple selectors can be chained together to select an element. This raises the specificity, but can be necessary.</li>
-							<li>Nested elements can be selected by separating selectors with a space.</li>
-							<li>The !important flag will override any style, however it should almost never be used, as it is extremely difficult to override.</li>
-							<li>Multiple unrelated selectors can receive the same styles by separating the selector names with commas.</li>
-						</ul>
-						<p>Great work this lesson. With this knowledge, you'll be able to use CSS to change the look and feel of websites to make them look great.</p>
-					</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Command Line&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../command-line-course/navigating.html">Navigating the File System</a></li>
+								<li><a href="../command-line-course/viewing.html">Viewing and Changing the File System</a></li>
+								<li><a href="../command-line-course/redirecting.html">Redirecting Input and Output</a></li>
+								<li><a href="../command-line-course/configuring.html">Configuring the Environment</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">HTML&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../html-course/introduction.html">Introduction to HTML</a></li>
+								<li><a href="../html-course/standards.html">HTML Document Standards</a></li>
+								<li><a href="../html-course/tables.html">Tables</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CSS&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li class="active"><a href="selectors.html">CSS Setup and Selectors</a></li>
+								<li><a href="rules.html">CSS Visual Rules</a></li>
+								<li><a href="model.html">The Box Model</a></li>
+								<li><a href="changing.html">Changing the Box Model</a></li>
+								<li><a href="display.html">CSS Display and Positioning</a></li>
+								<li><a href="color.html">CSS Color</a></li>
+								<li><a href="typography.html">CSS Typography</a></li>
+								<li><a href="grid.html">CSS Grid Essentials</a></li>
+								<li><a href="advanced.html">Advanced CSS Grid</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">JavaScript&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../javascript-course/introduction.html">Introduction</a></li>
+								<li><a href="../javascript-course/variables.html">Variables</a></li>
+								<li><a href="../javascript-course/controlflow.html">Control Flow</a></li>
+								<li><a href="../javascript-course/functions.html">Functions</a></li>
+								<li><a href="../javascript-course/scope.html">Scope</a></li>
+								<li><a href="../javascript-course/arrays.html">Arrays</a></li>
+								<li><a href="../javascript-course/loops.html">Loops</a></li>
+								<li><a href="../javascript-course/iterators.html">Iterators</a></li>
+								<li><a href="../javascript-course/objects.html">Objects</a></li>
+								<li><a href="../javascript-course/classes.html">Classes</a></li>
+								<li><a href="../javascript-course/browser.html">Browser Compatibility and Transpilation</a></li>
+								<li><a href="../javascript-course/modules.html">Modules</a></li>
+								<li><a href="../javascript-course/request1.html">Requests I</a></li>
+								<li><a href="../javascript-course/request2.html">Requests II</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PHP&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../php-course/introduction.html">Introduction to PHP</a></li>
+								<li><a href="../php-course/strings.html">PHP Strings and Variables</a></li>
+								<li><a href="../php-course/numbers.html">PHP Numbers</a></li>
+								<li><a href="../php-course/functions.html">Introduction to PHP Functions</a></li>
+								<li><a href="../php-course/builtin.html">Intro to Built-in PHP Functions</a></li>
+								<li><a href="../php-course/ordered.html">Ordered Arrays</a></li>
+								<li><a href="../php-course/associative.html">Associative Arrays</a></li>
+								<li><a href="../php-course/html.html">PHP and HTML</a></li>
+								<li><a href="../php-course/form.html">HTML Form Handling in PHP</a></li>
+								<li><a href="../php-course/comparison.html">Booleans and Comparison Operators</a></li>
+								<li><a href="../php-course/conditions.html">Logical Operators and Compound Conditions</a></li>
+								<li><a href="../php-course/loops.html">Loops</a></li>
+								<li><a href="../php-course/loops2.html">Loops in HTML</a></li>
+								<li><a href="../php-course/validation.html">Introduction to Form Validation</a></li>
+								<li><a href="../php-course/regex.html">Introduction to Regular Expressions</a></li>
+								<li><a href="../php-course/validation2.html">Introduction to PHP Form Validation</a></li>
+								<li><a href="../php-course/classes.html">Classes and Objects</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SQL&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../sql-course/manipulation.html">Manipulation</a></li>
+								<li><a href="../sql-course/queries.html">Queries</a></li>
+								<li><a href="../sql-course/functions.html">Aggregate Functions</a></li>
+								<li><a href="../sql-course/tables.html">Multiple Tables</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Java&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../java-course/hello.html">Hello World</a></li>
+								<li><a href="../java-course/variables.html">Variables</a></li>
+								<li><a href="../java-course/manipulating.html">Manipulating Variables</a></li>
+								<li><a href="../java-course/classes.html">Introduction to Classes</a></li>
+								<li><a href="../java-course/methods.html">Methods</a></li>
+								<li><a href="../java-course/conditionals.html">Conditionals and Control Flow</a></li>
+								<li><a href="../java-course/operators.html">Conditional Operators</a></li>
+								<li><a href="../java-course/arrays.html">Arrays</a></li>
+								<li><a href="../java-course/arraylists.html">ArrayLists</a></li>
+								<li><a href="../java-course/loops.html">Loops</a></li>
+								<li><a href="../java-course/string.html">String Methods</a></li>
+								<li><a href="../java-course/inheritance.html">Inheritance and Polymorphism</a></li>
+								<li><a href="../java-course/debugging.html">Debugging</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../resources.html#command-line-resources">Command Line</a></li>
+								<li><a href="../resources.html#html-resources">HTML</a></li>
+								<li><a href="../resources.html#css-resources">CSS</a></li>
+								<li><a href="../resources.html#javascript-resources">JavaScript</a></li>
+								<li><a href="../resources.html#php-resources">PHP</a></li>
+								<li><a href="../resources.html#sql-resources">SQL</a></li>
+								<li><a href="../resources.html#java-resources">Java</a></li>
+							</ul>
+						</li>
+					</ul>
 				</div>
-            </div>
+			</div>
+		</nav>
+		
+		<div class="container">
+			<ol class="breadcrumb">
+				<li>CSS</li>
+				<li>CSS Setup and Selectors</li>
+			</ol>
+			<h2>CSS Setup and Selectors</h2>
+			<h3>Review CSS Selectors</h3>
+			<p>Throughout this lesson, you learned how to select HTML elements with CSS and apply styles to them. Let's review what you learned:</p>
+			<ul>
+				<li>CSS can change the look of HTML elements. In order to do this, CSS must select HTML elements, then apply styles to them.</li>
+				<li>CSS can select HTML elements by tag, class, or ID.</li>
+				<li>Multiple CSS classes can be applied to one HTML element.</li>
+				<li>Classes can be reusable, while IDs can only be used once.</li>
+				<li>IDs are more specific than classes, and classes are more specific than tags. That means IDs will override any styles from a class, and classes will override any styles from a tag selector.</li>
+				<li>Multiple selectors can be chained together to select an element. This raises the specificity, but can be necessary.</li>
+				<li>Nested elements can be selected by separating selectors with a space.</li>
+				<li>The !important flag will override any style, however it should almost never be used, as it is extremely difficult to override.</li>
+				<li>Multiple unrelated selectors can receive the same styles by separating the selector names with commas.</li>
+			</ul>
+			<p>Great work this lesson. With this knowledge, you'll be able to use CSS to change the look and feel of websites to make them look great.</p>
 		</div>
+
+		<footer>
+			<div class="container">
+				<hr>
+				<div id="today"></div>
+			</div>
+		</footer>
 	</body>	
 </html>
